fixed overflow on profile and wishlist unlogged user

--- a/client/src/Components/BuyUser/buyUser.module.css
+++ b/client/src/Components/BuyUser/buyUser.module.css
@@ -45,7 +45,7 @@
 
 .notOrders{
     width:100%;
-    height: 100%;
+    height: fit-content;
     background-color: transparent;
     display: flex;
 
